--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>hanmoriaty~</title>
+  <title>hanifa~</title>
   <link rel="icon" type="image/png" href="nagi.jpg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Orbitron:wght@600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
