--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: cover;sd
       z-index: 0;
       filter: brightness(0.5);
     }
