--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="nagi.jpg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Orbitron:wght@600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     * {
       font-family: 'Poppins', sans-serif;
@@ -52,7 +53,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;sd
+      object-fit: cover;
       z-index: 0;
       filter: brightness(0.5);
     }
@@ -69,15 +70,16 @@
       top: 50%;
       transform: translateY(-50%);
       animation: fadeIn 2s ease;
+      padding: 0 20px;
     }
     .hero h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 5rem;
+      font-size: 4rem;
       color: #00ffe7;
       text-shadow: 0 0 30px #00ffe7;
     }
     .hero p {
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       margin-top: 15px;
       opacity: 0.85;
     }
@@ -87,10 +89,10 @@
       color: #0d1117;
       border: none;
       border-radius: 40px;
-      padding: 14px 35px;
+      padding: 12px 30px;
       font-weight: 600;
-      font-size: 1.05rem;
-      box-shadow: 0 0 25px #00ffe7;
+      font-size: 1rem;
+      box-shadow: 0 0 20px #00ffe7;
       transition: 0.4s;
     }
     .btn-neon:hover {
@@ -100,31 +102,23 @@
       box-shadow: 0 0 35px #00ffe7 inset;
     }
     .section-title {
-      font-size: 3rem;
-      margin-bottom: 40px;
+      font-size: 2.5rem;
+      margin-bottom: 35px;
       font-family: 'Orbitron', sans-serif;
       color: #00ffe7;
       text-shadow: 0 0 20px #00ffe7;
       text-align: center;
     }
     .about-text {
-      font-size: 1.15rem;
+      font-size: 1rem;
       line-height: 1.9;
       color: #c0c0c0;
       text-align: justify;
       text-indent: 20px;
     }
-    footer {
-      background: #0a0a0a;
-      color: #888;
-      text-align: center;
-      padding: 35px 0;
-      font-size: 0.95rem;
-      border-top: 1px solid #222;
-    }
     .gallery-img {
       width: 100%;
-      height: 100%;
+      height: 230px;
       object-fit: cover;
       border-radius: 12px;
       transition: transform 0.4s ease, box-shadow 0.4s;
@@ -134,66 +128,75 @@
       transform: scale(1.05);
       box-shadow: 0 0 25px #00ffe7;
     }
+    footer {
+      background: #0a0a0a;
+      color: #888;
+      text-align: center;
+      padding: 30px 0;
+      font-size: 0.95rem;
+      border-top: 1px solid #222;
+    }
     @keyframes fadeIn {
       0% { opacity: 0; transform: translateY(30px); }
       100% { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
+
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">hanmoriaty~🕷️</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#beranda">Beranda</a></li>
-        <li class="nav-item"><a class="nav-link" href="#galeri">Galeri</a></li>
-        <li class="nav-item"><a class="nav-link" href="#tentang">Tentang</a></li>
-        <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
-        <li class="nav-item"><a class="nav-link" href="#registrasi">Registrasi</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<section class="hero" id="beranda">
-  <video autoplay muted loop playsinline>
-    <source src="Your Name 4k.mp4" type="video/mp4">
-  </video>
-  <div class="hero-content">
-    <h1>Hanifa Gallery</h1>
-    <p>Web Developer • UI Designer • Digital Visionary</p>
-    <a href="#galeri" class="btn btn-neon">Lihat Galeri</a>
-  </div>
-</section>
-
-<!-- Galeri -->
-<section class="py-5" id="galeri">
-  <div class="container">
-    <h2 class="section-title">Galeri</h2>
-    <div class="row g-4">
-      <div class="col-md-4"><img src="wb1.jpg" class="gallery-img" alt="Karya 1"></div>
-      <div class="col-md-4"><img src="LIAM1.jpg" class="gallery-img" alt="Karya 2"></div>
-      <div class="col-md-4"><img src="icel1.jpg" class="gallery-img" alt="Karya 3"></div>
-    </div>
-  </div>
-</section>
-
-<!-- Tentang -->
-<section class="py-5" id="tentang">
-  <div class="container">
-    <h2 class="section-title">Sang Kreator</h2>
-    <div class="row align-items-center">
-      <div class="col-md-5 mb-4 mb-md-0">
-        <img src="hani.jpeg" class="img-fluid rounded-4 shadow-lg" alt="Hanmoriaty">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">hanmoriaty~🕷️</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#beranda">Beranda</a></li>
+          <li class="nav-item"><a class="nav-link" href="#galeri">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link" href="#tentang">Tentang</a></li>
+          <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
+          <li class="nav-item"><a class="nav-link" href="#registrasi">Registrasi</a></li>
+        </ul>
       </div>
-      <div class="col-md-7">
-        <p class="about-text">
-          Perkenalkan, aku Hanifa Shakila M., seorang remaja kecil berusia 13 tahun. Ya,
+    </div>
+  </nav>
+
+  <section class="hero" id="beranda">
+    <video autoplay muted loop playsinline>
+      <source src="Your Name 4k.mp4" type="video/mp4">
+    </video>
+    <div class="hero-content">
+      <h1>Hanifa Gallery</h1>
+      <p>Website pemula</p>
+      <a href="#galeri" class="btn btn-neon">Lihat Galeri</a>
+    </div>
+  </section>
+
+  <!-- Galeri -->
+  <section class="py-5" id="galeri">
+    <div class="container">
+      <h2 class="section-title">Galeri</h2>
+      <div class="row g-4">
+        <div class="col-12 col-md-4"><img src="wb1.jpg" class="gallery-img" alt="Karya 1"></div>
+        <div class="col-12 col-md-4"><img src="LIAM1.jpg" class="gallery-img" alt="Karya 2"></div>
+        <div class="col-12 col-md-4"><img src="icel1.jpg" class="gallery-img" alt="Karya 3"></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Tentang -->
+  <section class="py-5" id="tentang">
+    <div class="container">
+      <h2 class="section-title">Sang Kreator</h2>
+      <div class="row align-items-center">
+        <div class="col-12 col-md-5 mb-4 mb-md-0">
+          <img src="hani.jpeg" class="img-fluid rounded-4 shadow-lg" alt="Hanmoriaty">
+        </div>
+        <div class="col-12 col-md-7">
+          <p class="about-text">
+            Perkenalkan, aku Hanifa Shakila M, seorang remaja kecil berusia 13 tahun. Ya,
           kamu benar 13 tahun. Namun, jangan salah kira, aku bukan hanya seorang remaja biasa
           yang tenggelam dalam arus digital yang dangkal. Aku adalah seseorang yang telah menguasai 
           seni yang jauh melampaui sekadar scrolling dan menikmati konten tanpa arah. Di dunia yang 
@@ -202,54 +205,38 @@
           yang digunakan oleh para pembuat masa depan. Mungkin kedengarannya klise, tapi buat aku, itu adalah
           kenyataan yang tidak banyak orang mampu pahami. Sementara banyak di luar sana berjuang hanya untuk 
           mendapatkan satu juta view, aku sedang merancang masa depan dengan tangan sendiri
-          <br><br>
-          “Meski usiaku baru 13 tahun, aku udah paham pola mainnya — banyak Gen Z di sini sibuk tawuran, 
-            hamil duluan, pacaran toxic, rebahan kayak bangkai, matematikanya zonk, tapi sok paling benci negara.
-            Nanti pas hidup susah, teriak ‘Indonesia nggak adil’, padahal yang mereka perjuangin cuma konten 
-            viral, nikah muda buat views, sama ngemis validasi fake di sosial media. Jadi? Masih bisa 
-            bilang ‘Gw miskin, coba aja gw kaya mendadak’? Pengennya sih kaya… iya kaya kok. 
-            KAYA BEBAN PENGANGGURAN. Coba deh ubah pola pikir dari ‘Coba aja gue terlahir kaya’ jadi
-            ‘Kekayaan di keluarga gue akan dimulai dari gue sendiri’. Kan lebih enak didengar, lebih berkelas.
-            Tapi inget, JANGAN cuma jadi WACANA tapi harus DIBUKTIKAN dengan tindakan LANGSUNG”
-        </p>
+            (isi konten tentang tetap di sini)
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-<!-- Registrasi -->
-<section class="py-5" id="registrasi">
-  <div class="container">
-    <h2 class="section-title">Registrasi</h2>
-    <p class="text-center text-light">"Di balik setiap nama yang terukir, tersimpan kisah yang menunggu
-       untuk dibangkitkan. Masukkan namamu, dan biarkan sejarah menulis sisanya."</p>
-    <form>
-      <div class="mb-3">
-        <label for="nama" class="form-label">Nama Lengkap</label>
-        <input type="text" class="form-control" id="nama" placeholder="Masukkan nama lengkap" required>
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" placeholder="Masukkan email" required>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Masukkan password" required>
-      </div>
-      <button type="submit" class="btn btn-neon w-100">Daftar</button>
-    </form>
-  </div>
-</section>
+  </section>
 
+  <!-- Registrasi -->
+  <section class="py-5" id="registrasi">
+    <div class="container">
+      <h2 class="section-title">Registrasi</h2>
+      <p class="text-center text-light">"Di balik setiap nama yang terukir..."</p>
+      <form>
+        <div class="mb-3">
+          <label for="nama" class="form-label">Nama Lengkap</label>
+          <input type="text" class="form-control" id="nama" placeholder="Masukkan nama lengkap" required>
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" placeholder="Masukkan email" required>
+        </div>
+        <!-- Tambahkan tombol submit -->
+        <button type="submit" class="btn btn-neon w-100">Daftar Sekarang</button>
+      </form>
+    </div>
+  </section>
 
-<footer>
-<p>&copy; 2025 Hanifa Shakila M. | All rights
+  <footer>
+  </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<footer>
-  <p>&copy; 2025 Hanmoriaty~ All Rights Reserved.</p>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
