--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
   </section>
 
   <footer>
+      <p>&copy; 2025 Hanmoriaty~ All Rights Reserved.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
