--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
   <section class="py-5" id="registrasi">
     <div class="container">
       <h2 class="section-title">Registrasi</h2>
-      <p class="text-center text-light">"Di balik setiap nama yang terukir..."</p>
+      <p class="text-center text-light">"Di balik setiap nama yang terukir tersimpan kisah yang menunggu
+       untuk dibangkitkan. Masukkan namamu, dan biarkan sejarah menulis sisanya." "</p>
       <form>
         <div class="mb-3">
           <label for="nama" class="form-label">Nama Lengkap</label>
